adições nos projetos e outros pormenores

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="gallery-image">
                     <div class="image-wrapper">
                         <img src="/Portfolio/images/orca.jpg" alt="orca" class="zoomed-image"> <!-- Piscina da Orca -->
-                        <div class="zoomed-text">Já tive algumas experiências no mundo no trabalho, como quando trabalhei no bar da Piscina da Orca, no verão de 2022, onde aprendi a trabalhar em equipa e a interagir com o público, ...</div>
+                        <div class="zoomed-text">Já tive algumas experiências no mundo do trabalho, como quando trabalhei no bar da Piscina da Orca, no verão de 2022, onde aprendi a trabalhar em equipa e a interagir com o público, ...</div>
                     </div>
                 </div>
                 <div class="gallery-image">
@@ -198,7 +198,7 @@
                 <div class="card-content">
                     <img src="/Portfolio/images/solarSystem.png" alt="solarSystem">
                     <h3>Sistema Solar</h3>  
-                    <h4>Uma pequena simulação gráfica, em OpenGL (C++)</h4>
+                    <h4>Uma pequena simulação gráfica, em OpenGL (C++). Algumas das funcionalidades incluem efeitos de Post-Processing como Lens Flare e Bloom, um Menu Principal e um Menu Individual para cada planeta com as suas informações, música ambiente, entre outras.</h4>
                 </div>
             </div>
             <div class="card">
@@ -206,7 +206,7 @@
                 <div class="card-content">
                     <img src="/Portfolio/images/sentimentalyst.png" alt="sentimentalyst">
                     <h3>Sentimentalyst</h3>  
-                    <h4>Uma aplicação que deteta os sentimentos de uma frase</h4>
+                    <h4>Uma aplicação que deteta os sentimentos de uma texto, dividindo-o em frases e avaliando cada frase individualmente entre Muito Negativa e Muito Positiva. Inclui outra funcionalidade em que divide o texto em grupos de palavras.</h4>
                 </div>
             </div>
             <div class="card">
@@ -214,7 +214,7 @@
                 <div class="card-content">
                     <img src="/Portfolio/images/money.png" alt="money">
                     <h3>Money</h3>  
-                    <h4>Uma aplicação móvel para gestão de orçamentos de uma empresa de construção civil</h4>
+                    <h4>Uma aplicação móvel para gestão de orçamentos de uma empresa de construção civil, realizada em Flutter e Dart. Algumas das funcionalidades incluem fazer encomendas, ver e aceitar tarefas, criar e modificar obras, adicionar fundos, entre outras.</h4>
                 </div>
             </div>
         </div>
