--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
             <p class="center bigHome">Olá! O meu nome é</p>
             <!-- O nome tem um efeito feito em JS -->
             <h1 data-value="ANTÓNIO CRUZ">ANTÓNIO CRUZ</h1>
-            <p class="center bigHome">e sou recém-licenciado em Engenharia Informática,</p>
-            <p class="center mediumHome"> para além de ser um entusiasta em Inteligência Artificial,
-                Desenvolvimento de Software e Desenvolvimento de Jogos Digitais.
+            <p class="center bigHome">e estou prestes a licenciar-me em Engenharia Informática,</p>
+            <p class="center mediumHome"> para além de ser um entusiasta em Inteligência Artificial e Desenvolvimento de Software.
                 Procuro agora uma oportunidade de trabalho para desenvolver as minhas capacidades e crescer como profissional e como pessoa.
             </p>
             <div class="cv">
@@ -85,7 +84,7 @@
                 <div class="gallery-image">
                     <div class="image-wrapper">
                         <img src="/Portfolio/images/AI.jpg" alt="inteligencia artificial" class="zoomed-image" style="margin-left: -90px;"> <!-- Inteligência Artificial -->
-                        <div class="zoomed-text">Apesar de gostar um pouco de tudo dentro da informática, ao fim destes três anos tornei-me um entusiasta em Inteligência Artificial, Desenvolvimento de Software e Desenvolvimento de Jogos Digitais.</div>
+                        <div class="zoomed-text">Apesar de gostar um pouco de tudo dentro da informática, ao fim destes três anos tornei-me um entusiasta em Inteligência Artificial e Desenvolvimento de Software.</div>
                     </div>
                 </div>
                 <div class="gallery-image">
