mudanças no cv e certificado adicionado

--- a/index.html
+++ b/index.html
@@ -238,6 +238,10 @@
                 <h3>Scrum</h3>
                 <p>Gestão de Projetos com Métodos Ágeis</p>
             </div>
+            <div class="certificate-box" onclick="openPdf('/Portfolio/files/Certificado-Excel1.pdf')">
+                <h3>Excel</h3>
+                <p>Formação sobre as Funcionalidades Básicas de Excel</p>
+            </div>
             <div class="certificate-box" onclick="openPdf('/Portfolio/files/PSAnimais.pdf')">
                 <h3>Primeiros Socorros Animais</h3>
                 <p>Nunca se sabe quando vai ser preciso! 😉</p>
