updated "Sobre Mim" section

--- a/index.html
+++ b/index.html
@@ -99,14 +99,26 @@
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
-                        <img src="/Portfolio/images/celfinet.jpg" alt="celfinet" class="zoomed-image" style="margin-left: -100px;"> <!-- Celfinet -->
-                        <div class="zoomed-text">... e o estágio de verão que fiz na Celfinet, em 2023, onde aprendi a trabalhar com dados e desenvolvi as minhas capacidades de apresentação, em português e em inglês, entre muitas outras coisas.</div>
+                        <img src="/Portfolio/images/celfinet.jpg" alt="celfinet" class="zoomed-image" style="margin-left: -100px;"> <!-- Celfinet, estagio -->
+                        <div class="zoomed-text">... e o estágio de verão que fiz na Celfinet, em 2023, onde trabalhei com Análise de Dados e desenvolvi as minhas capacidades de apresentação, em português e em inglês, entre muitas outras coisas.</div>
+                    </div>
+                </div>
+                <div class="gallery-image">
+                    <div class="image-wrapper">
+                        <img src="/Portfolio/images/Celfinet_Jantar_Natal.jpg" alt="Jantar Natal Celfinet" class="zoomed-image" style="margin-left: -100px;"> <!-- Cyient, atualmente -->
+                        <div class="zoomed-text">Desde abril de 2024 que estou a trabalhar na Celfinet, agora Cyient, onde estou a trabalhar com Inteligência Artificial Generativa, ao estar a desenvolver um chatbot para o software da empresa, o VISMON.</div>
+                    </div>
+                </div>
+                <div class="gallery-image">
+                    <div class="image-wrapper">
+                        <img src="/Portfolio/images/Prémio_Jantar_Natal.jpg" alt="Prémio Jantar Natal Celfinet" class="zoomed-image" style="margin-left: -5px;"> <!-- Cyient, atualmente -->
+                        <div class="zoomed-text">Aqui aprendi muito sobre LLMs e agentes de IA, ao trabalhar com diversas frameworks como LangChain, LangFlow, Neo4J e CrewAI, onde ao mesmo tempo desenvolvi os meus conhecimentos de redes, bases de dados, frontend e backend.</div>
                     </div>
                 </div>
                 <div class="gallery-image">
                     <div class="image-wrapper">
                         <img src="/Portfolio/images/jogo.jpg" alt="jogo" class="zoomed-image" style="margin-left: -40px;"> <!-- Jogo -->
-                        <div class="zoomed-text">Falando um pouco mais a nível pessoal, gosto de aproveitar o meu tempo livre para descontrair e fazer algumas coisas, como jogar um pouco, ...</div>
+                        <div class="zoomed-text">Falando um pouco mais a nível pessoal, gosto de aproveitar o meu tempo livre para descontrair e fazer algumas coisas, como jogar um pouco, sozinho ou com amigos, ...</div>
                     </div>
                 </div>
                 <div class="gallery-image">
@@ -136,7 +148,7 @@
                 <div class="gallery-image">
                     <div class="image-wrapper">
                         <img src="/Portfolio/images/coro1.jpg" alt="coro Marrocos" class="zoomed-image" style="margin-left: -70px;"> <!-- Coro em Marrocos - Fado -->
-                        <div class="zoomed-text">... e também adoro cantar, na verdade gosto tanto que faço parte de um coro! É o Coro Misto da Beira Interior, onde já sou membro há mais de 6 anos, ...</div>
+                        <div class="zoomed-text">... e também adoro cantar, na verdade gosto tanto que faço parte de um coro! É o Coro Misto da Beira Interior, onde já sou membro há mais de 8 anos, ...</div>
                     </div>
                 </div>
                 <div class="gallery-image">
@@ -148,7 +160,7 @@
                 <div class="gallery-image">
                     <div class="image-wrapper">
                         <img src="/Portfolio/images/coro2.jpg" alt="coro França" class="zoomed-image" style="margin-left: -100px;"> <!-- Coro em França - Renascença -->
-                        <div class="zoomed-text">... e onde já passei muito boas memórias, no meio de muito trabalho e dedicação, centenas de ensaios, estágios e concertos de todos os géneros e feitios.</div>
+                        <div class="zoomed-text">... e onde já passei muito bons momentos, no meio de muito trabalho e dedicação, centenas de ensaios, estágios e concertos de todos os géneros e feitios.</div>
                     </div>
                 </div>
                 <div class="gallery-image">
